--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -37,4 +37,5 @@
     <color name="dialog_bg_press">#f0f0f0</color>
     <color name="dialog_cancel">#323233</color>
     <color name="dialog_confirm">#007ac9</color>
+    <color name="lv">#26ff32</color>
 </resources>
