--- a/lib_common/src/main/res/layout/view_empty_data.xml
+++ b/lib_common/src/main/res/layout/view_empty_data.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/ll_root"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:gravity="center"
-        android:paddingBottom="@dimen/dp_80"
-        android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_root"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/dp_80">
 
     <ImageView
-            android:id="@+id/iv_no_data"
-            android:layout_width="@dimen/dp_120"
-            android:layout_height="@dimen/dp_164"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_data_empty"
-            tools:ignore="ContentDescription" />
+        android:id="@+id/iv_no_data"
+        android:layout_width="@dimen/dp_120"
+        android:layout_height="@dimen/dp_164"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_data_empty"
+        tools:ignore="ContentDescription" />
 
     <TextView
-            android:id="@+id/tv_no_data"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginStart="@dimen/dp_20"
-            android:layout_marginEnd="@dimen/dp_20"
-            android:text="@string/default_no_data"
-            android:textColor="@color/color_4f5356"
-            android:textSize="@dimen/text_size_13" />
+        android:id="@+id/tv_no_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_20"
+        android:layout_marginEnd="@dimen/dp_20"
+        android:gravity="center"
+        android:text="@string/default_no_data"
+        android:textColor="@color/color_4f5356"
+        android:textSize="@dimen/text_size_13" />
+
+    <TextView
+        android:id="@+id/tv_retry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_20"
+        android:layout_marginEnd="@dimen/dp_20"
+        android:layout_marginTop="@dimen/text_size_24"
+        android:background="@drawable/selector_collect_new"
+        android:gravity="center"
+        android:text="重试"
+        android:textColor="@color/color_4f5356"
+        android:textSize="@dimen/text_size_24" />
 </LinearLayout>
