--- a/lib_framework/src/main/res/layout/dialog_loading.xml
+++ b/lib_framework/src/main/res/layout/dialog_loading.xml
@@ -7,13 +7,13 @@
 
     <LinearLayout
         android:id="@+id/toast"
-        android:gravity="center"
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
         android:paddingStart="@dimen/dp_24"
-        android:paddingEnd="@dimen/dp_24"
         android:paddingTop="@dimen/dp_10"
+        android:paddingEnd="@dimen/dp_24"
         android:paddingBottom="@dimen/dp_10">
 
         <ImageView
@@ -24,13 +24,13 @@
 
         <TextView
             android:id="@+id/tvMsg"
-            android:text="加载中"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_gravity="center_horizontal"
-            android:textSize="@dimen/sp_12"
-            android:textColor="@android:color/white" />
+            android:layout_marginTop="5dp"
+            android:text="加载中"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_12" />
     </LinearLayout>
 
 </LinearLayout>
