--- a/mod_main/src/main/res/layout/activity_splash.xml
+++ b/mod_main/src/main/res/layout/activity_splash.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="match_parent"
-            android:src="@mipmap/bg_welcome"
-            android:scaleType="centerCrop"
-            android:layout_height="match_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/bg_welcome" />
 
     <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_skip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_13"
-            android:textColor="@color/white"
-            android:layout_gravity="end"
-            android:layout_marginEnd="@dimen/dp_26"
-            android:layout_marginTop="@dimen/dp_62"
-            android:background="@drawable/bg_skip_btn"
-            android:paddingBottom="@dimen/dp_6"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_6"
-            tools:text="跳过3s" />
+        android:id="@+id/tv_skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginTop="@dimen/dp_62"
+        android:layout_marginEnd="@dimen/dp_26"
+        android:background="@drawable/bg_skip_btn"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingTop="@dimen/dp_6"
+        android:paddingRight="@dimen/dp_10"
+        android:paddingBottom="@dimen/dp_6"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_13"
+        tools:text="跳过3s" />
 
     <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textSize="@dimen/text_size_14"
-            android:textColor="@color/color_222427"
-            android:text="ST_Wan_Android" />
+        android:id="@+id/net_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/background_selector"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:text="ST_Wan_Android"
+        android:textColor="@color/textcolor_selector"
+        android:textSize="@dimen/text_size_14" />
 </FrameLayout>
