--- a/mod_main/src/main/res/values/colors.xml
+++ b/mod_main/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="pink">#ffffcbd7</color>
+    <color name="green">#ffbae4b6</color>
 </resources>
